# wsclone

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
libwsclone/: Cargo.toml
libwsclone/src/: download.rs  errors.rs  lib.rs  link.rs  session.rs
src/: download.rs  errors.rs  lib.rs  link.rs  main.rs  resource.rs  session.rs
ui/common/: Cargo.toml
ui/common/src/: command.rs  error.rs  ipc_helpers.rs  lib.rs  response.rs
ui/daemon/: Cargo.toml
ui/daemon/src/: cli.rs  command_handlers.rs  error.rs  handlers.rs  main.rs  state.rs
ui/desktop/: package.json
ui/desktop/src/: app.css
ui/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui/desktop/src-tauri/src/: main.rs  plugin.rs  settings.rs  state.rs
ui/desktop/src/lib/: psychic.ts  types.ts
ui/desktop/src/lib/components/common/: Alert.svelte  Navbar.svelte
ui/desktop/src/lib/components/common/svg/: Add.svelte  Clone.svelte  Dashboard.svelte  Logo.svelte  Settings.svelte
ui/desktop/src/lib/stores/: Alert.ts  Navbar.ts
ui/desktop/src/routes/: +layout.svelte  +page.svelte
ui/desktop/src/routes/add/: +page.svelte
ui/desktop/src/routes/add/components/: AddClone.svelte
ui/desktop/src/routes/clones/: +page.svelte
ui/desktop/src/routes/settings/: +page.svelte
wsclone_cli/: Cargo.toml
wsclone_cli/src/: cli.rs  main.rs
wsclone_ui/: package.json
