[package]
name = "wsclone"
version = "0.1.0"
edition = "2021"

[lib]
name = "libwsclone"
path = "src/lib.rs"

[[bin]]
name = "wsclone"
path = "src/main.rs"

[dependencies]
aho-corasick = "0.7.20"
chrono = "0.4.23"
futures = "0.3.25"
lazy_static = "1.4.0"
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.13", features = []}
scraper = "0.14.0"
tokio = {version = "1.23.0", features = ["time", "fs", "io-util", "macros", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
url = "2.3.1"
