[package]
name = "wsclone"
version = "0.1.0"
edition = "2021"
authors = ["Owusu Kelvin Clark"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
clap = { version = "4.0.32", features = ["derive"] }
url = "2.3.1"
chrono = "0.4.23"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
tracing-appender = "0.2.2"
owo-colors = {version = "3.5.0", features = ["supports-colors"]}

libwsclone = {path = "../libwsclone"}


