[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread", "net"]}
clap = { version = "4.0.32", features = ["derive"] }
ws_common = {package = "common", path = "../common"}
