[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread", "net", "time", "io-util"]}
clap = { version = "4.0.32", features = ["derive"] }
ws_common = {package = "common", path = "../common"}
libwsclone = {path = "../../libwsclone"}
serde_json = "1.0.91"
serde = {version = "1.0.152", features = ["derive"]}
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
tracing-appender = "0.2.2"
tracing = "0.1.37"
